--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -95,7 +95,7 @@ CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_RCU_BOOST is not set
 # CONFIG_RCU_NOCB_CPU is not set
 CONFIG_IKCONFIG=y
-# CONFIG_IKCONFIG_PROC is not set
+CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
@@ -254,9 +254,9 @@ CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_BFQ is not set
-CONFIG_DEFAULT_NOOP=y
-CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_DEFAULT_BFQ=y
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
@@ -340,7 +340,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-CONFIG_KSM=y
+# CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -3530,9 +3530,9 @@ CONFIG_MSM_CPU_PWR_CTL=y
 # CONFIG_MSM_CORE_CTL_HELPER is not set
 # CONFIG_MSM_CORE_CTL is not set
 # CONFIG_MSM_PERFORMANCE is not set
-# CONFIG_INTELLI_PLUG is not set
+CONFIG_INTELLI_PLUG=y
 # CONFIG_MSM_HOTPLUG is not set
-CONFIG_THUNDERPLUG_CONTROL=y
+# CONFIG_THUNDERPLUG_CONTROL is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
