--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -352,6 +352,10 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_PROCESS_RECLAIM=y
+# CONFIG_ZPOOL is not set
+CONFIG_ZSMALLOC=y
+# CONFIG_PGTABLE_MAPPING is not set
+# CONFIG_ZSMALLOC_STAT is not set
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 # CONFIG_SECCOMP is not set
@@ -1001,6 +1005,9 @@ CONFIG_OF_RESERVED_MEM=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
+# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -3289,9 +3296,6 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_USB_SERIAL_QUATECH2 is not set
 # CONFIG_DX_SEP is not set
-CONFIG_ZSMALLOC=y
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_DEBUG is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
@@ -3529,9 +3533,6 @@ CONFIG_MSM_CORE_CTL_HELPER=y
 # CONFIG_MSM_CORE_CTL is not set
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
-CONFIG_INTELLI_PLUG=y
-# CONFIG_MSM_HOTPLUG is not set
-# CONFIG_THUNDERPLUG_CONTROL is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
@@ -4041,6 +4042,8 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
